--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -6,13 +6,12 @@
         こんにちは、
         <%= link_to "#{current_user.name}さん", user_path(current_user.id), class: :greeting__link%>
       </div>
-     <%= render partial: "prototype", collection:  @prototype%>
- <% else %>
+      <% end %>
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
+    <%= render partial: "prototype", collection:  @prototypes%>
 
-      <% end %>
     </div>
   </div>
 </main>
